# 23LPCVC_Segmentation_Track-Sample_Solution

./: .gitignore  .markdownlint.json  .mdformat.toml  .pre-commit-config.yaml  README.md  lpcv-docker-app.dockerfile  pyproject.toml  requirements.txt  setup.bash  submission1.py  submission2.py
LPCVC_Train_Updated/: README.txt
evaluation/: README.md  accuracy.py  clear_gpu.py  evaluation.bash  evaluation.py  main.py  requirements.txt
evaluation/output/: output.json  solution.json
lpcvc2023_sample_solution/: README.md  __main__.py  fanet.py  main.py  resnet.py
lpcvc2023_sample_solution/utils/: accuracy.py  fanet.py  resnet.py
solution/: README.md  main.py
submission1/: fanet.py  save_trt.py
util/: util.py
