[tool.poetry]
name = "lpcvc2023-sample-solution"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "lpcvc2023_sample_solution"}]

[tool.poetry.dependencies]
python = "^3.10"
imageio = "^2.25.1"
numpy = "^1.24.2"
opencv-contrib-python = "^4.7.0.68"
torch = "^1.13.1"
torchvision = "^0.14.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
